--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "tape": "~2.3.2"
   },
+  "browserify": {
+    "transform": "brfs"
+  },
   "scripts": {
     "test": "tape test/*.js"
   },
