--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "brfs": "~1.0.0",
     "class-list": "~0.1.1",
     "domify": "~1.2.2",
-    "inherits": "~2.0.1"
+    "inherits": "~2.0.1",
+    "insert-css": "^0.1.1"
   },
   "devDependencies": {
     "tape": "~2.3.2"
