--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "timeline for multimedia editors",
   "main": "index.js",
+  "style": "timeline.css",
   "dependencies": {
     "brfs": "~1.0.0",
     "class-list": "~0.1.1",
